Finally fix ugly delete button alignment

--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -1,24 +1,8 @@
-/*.Student {*/
-	/*color: #333;*/
-	/*margin-bottom: 5px;*/
-	/*width: 300px;*/
-	/*display: flex;*/
-	/*height: 45px;*/
-	/*flex-direction: row;*/
-	/*flex-wrap: nowrap;*/
-	/*justify-content: space-between;*/
-/*}*/
-
-.Student > * {
-	align-self: center;
-	box-sizing: border-box;
-}
-
 .Student {
 	font-size: 22px;
 	color: #505050;
 	border: 1px solid #e8e8e8;
-	width: 260px;
+	width: 100%;
 	height: 40px;
 	line-height: 38px;
 	padding-left: 10px;
